logs/symautomata.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/symautomata'...
Compiling './lib/python3.5/site-packages/symautomata/brzozowski.py'...
***   File "./lib/python3.5/site-packages/symautomata/brzozowski.py", line 208
    print 'Parsing ruleset: ' + targetfile,
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/symautomata/dfa.py'...
***   File "./lib/python3.5/site-packages/symautomata/dfa.py", line 46
    print 'Checking for pywrapfst module:',
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/symautomata/flex2fst.py'...
***   File "./lib/python3.5/site-packages/symautomata/flex2fst.py", line 302
    print 'Usage: %s fst_file [optional: save_file]' % argv[0]
                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/symautomata/pda.py'...
***   File "./lib/python3.5/site-packages/symautomata/pda.py", line 5
    print 'Checking for pythonpda module:',
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/symautomata/pdacnf.py'...
***   File "./lib/python3.5/site-packages/symautomata/pdacnf.py", line 114
    print 'PDA is empty and can not be reduced'
                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/symautomata/pdadiff.py'...
***   File "./lib/python3.5/site-packages/symautomata/pdadiff.py", line 95
    print 'PDA States: ' + repr(p1automaton.n)
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/symautomata/pdastring.py'...
***   File "./lib/python3.5/site-packages/symautomata/pdastring.py", line 499
    print exists
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/symautomata/pythondfa.py'...
***   File "./lib/python3.5/site-packages/symautomata/pythondfa.py", line 137
    return "This is a python DFA object with " + `len(self.states)` + " states"
                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/symautomata/pythonpda.py'...
***   File "./lib/python3.5/site-packages/symautomata/pythonpda.py", line 16
    print " ID " + repr(self.id)
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/symautomata/pywrapfstdfa.py'...
***   File "./lib/python3.5/site-packages/symautomata/pywrapfstdfa.py", line 80
    print  'Setting arcs is not implemented'
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/symautomata/regex.py'...
***   File "./lib/python3.5/site-packages/symautomata/regex.py", line 467
    print 'Parsing ruleset: ' + targetfile,
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/symautomata/sfa.py'...
***   File "./lib/python3.5/site-packages/symautomata/sfa.py", line 318
    print 'SFA-DFA result on {}: {} - {}'.format(input_string, sfa.consume_input(input_string),
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/symautomata/stateremoval.py'...
***   File "./lib/python3.5/site-packages/symautomata/stateremoval.py", line 138
    print self.l_transitions
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/symautomata-0.0.11.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
